--- a/Website/layouts/partials/contact.html
+++ b/Website/layouts/partials/contact.html
@@ -15,7 +15,7 @@
 
                 <div id="contact-message"></div>
 
-                <form class="contact-form" method="post" action="https://formspree.io/{{ .Site.Params.email }}">
+                <form class="contact-form" method="post" action="https://formspree.io/{{ .Site.Params.formspree_id }}">
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="form-group">
