--- a/Website/layouts/partials/contact.html
+++ b/Website/layouts/partials/contact.html
@@ -37,6 +37,7 @@
                         </div>
 
                         <div class="col-sm-12 text-center">
+                          <input type="text" name="_gotcha" class="formspree-input" />
                           <button type="submit" class="btn btn-template-main"><i class="fa fa-envelope-o"></i>{{ i18n "contactSend" }}</button>
 
                         </div>
