--- a/Website/static/css/style.samm.css
+++ b/Website/static/css/style.samm.css
@@ -3951,6 +3951,8 @@ a.list-group-item.active > .badge,
   -webkit-transition: all 0.2s ease-out;
   -moz-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
+  padding-right: 20px;
+  padding-left: 20px;
 }
 .flex-container img:hover {
   max-width: auto;
