--- a/Website/layouts/shortcodes/language-dropdown.html
+++ b/Website/layouts/shortcodes/language-dropdown.html
@@ -1,12 +1,11 @@
-{{ $languages := .Page.Params.languages }}
 <div class="navbar-collapse collapse" id="navigation">
   <ul class="nav navbar-nav navbar-right">
     <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Select a language <span class="caret"></span></a>
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ i18n "selectLanguage" }} <span class="caret"></span></a>
       <ul class="dropdown-menu">
-      {{ range $languages }}
-        <li><a href="../{{ .language }}/model">{{ .alt_text }}</a></li>
-      {{ end }}
+        {{ range $.Site.Home.AllTranslations }}
+        <li><a href="{{ .Permalink }}model/">{{ .Language.LanguageName }}</a></li>
+        {{ end }}
       </ul>
     </li>
   </ul>
