Adds baner and page for SUD 2021

--- a/Website/layouts/index.html
+++ b/Website/layouts/index.html
@@ -17,7 +17,7 @@
 
         {{ partial "carousel.html" . }}
 
-<!--        {{ partial "banner.html" . }}-->
+        {{ partial "banner_sud.html" . }}
 
         {{ partial "features.html" . }}
 
