--- a/Website/layouts/partials/testimonials.html
+++ b/Website/layouts/partials/testimonials.html
@@ -1,7 +1,8 @@
 {{ if isset .Site.Params "testimonials" }}
 {{ if .Site.Params.testimonials.enable }}
 {{ if gt (len .Site.Data.testimonials) 0 }}
-<section class="bar background-pentagon no-mb">
+<section class="bar background-image-fixed-3 no-mb color-white text-center">
+<div class="dark-mask"></div>
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -13,31 +14,59 @@
                   {{ .Site.Params.testimonials.subtitle | markdownify }}
                 </p>
 
-                <!-- *** TESTIMONIALS CAROUSEL *** -->
-
-                <ul class="owl-carousel testimonials same-height-row">
-                    {{ range .Site.Data.testimonials }}
-                    <li class="item">
-                        <div class="testimonial same-height-always">
-                            <div class="text">
-                                <p>{{ .text | markdownify }}</p>
-                            </div>
-                            <div class="bottom">
-                                <div class="icon"><i class="fa fa-quote-left"></i>
+                <div class="testimonials-flex-container testimonials">
+                        {{ range .Site.Data.testimonials }}
+                        <div class="item">
+                            <div class="testimonial">
+                                <div class="text">
+                                    <p>{{ .text | markdownify }}</p>
                                 </div>
-                                <div class="name-picture">
-                                    <img class="" alt="" src="{{ .avatar | absURL }}">
-                                    <h5>{{ .name }}</h5>
-                                    <p>{{ .position }}</p>
+                                <div class="bottom">
+                                    <div class="icon"><i class="fa fa-quote-left"></i>
+                                    </div>
+                                    <div class="name-picture">
+                                        <img alt="photo" src="{{ .avatar | absURL }}">
+                                        <h5>{{ .name }}</h5>
+                                        <p>{{ .position }}</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </li>
+                        {{ end }}
+                    </div>
+
+                <!-- *** TESTIMONIALS CAROUSEL *** 
+
+                <ul class="owl-carousel testimonials same-height-row">
+                    {{ range .Site.Data.testimonials }}
+                    <div class="owl-item" style="width: 285px;">
+                        <li class="item">
+                            <div class="testimonial same-height-always">
+                                <div class="text">
+                                    <p>{{ .text | markdownify }}</p>
+                                </div>
+                                <div class="bottom">
+                                    <div class="icon"><i class="fa fa-quote-left"></i>
+                                    </div>
+                                    <div class="name-picture">
+                                        <img class="" alt="" src="{{ .avatar | absURL }}">
+                                        <h5>{{ .name }}</h5>
+                                        <p>{{ .position }}</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </div>
                     {{ end }}
                 </ul>
+            -->
                 <!-- /.owl-carousel -->
 
                 <!-- *** TESTIMONIALS CAROUSEL END *** -->
+                <p class="text-center">
+                    <a href="{{ .Site.Params.testimonials.link_url }}" class="btn btn-template-transparent-black btn-lg">{{ .Site.Params.testimonials.link_text }}</a>
+                </p>
+    
             </div>
 
         </div>
