Adds agenda for SUD 2021

--- a/Website/layouts/partials/banner_sud.html
+++ b/Website/layouts/partials/banner_sud.html
@@ -3,13 +3,13 @@
           <div class="row">
               <div class="col-md-12">
                   <div class="heading text-center">
-                      <h2>Save the date</h2>
+                      <h2>User Day</h2>
                   </div>
               </div>
           </div>
           <div class="row">
             <p class="lead text-center">
-                The first SAMM User Day of this year is coming!
+                Register now for free! The SAMM User Day is near.
             </p>
             <p class="highlight text-center">
                 May 27th, 2021
@@ -18,7 +18,8 @@
           <div class="row">
               <div class="col-md-12">
                   <p class="text-center">
-                    <a href="/user-day/" class="btn btn-template-transparent-main btn-lg" style="margin-left:10px;">Learn more</a>
+                      <a href="/user-day/" class="btn btn-template-transparent-main btn-lg" style="margin-left:10px;">Register</a>
+                      <a href="/user-day/" class="btn btn-template-transparent-main btn-lg" style="margin-left:10px;">Learn more</a>
                   </p>
                   
               </div>
