--- a/Website/layouts/shortcodes/user_day_agenda_2021a.html
+++ b/Website/layouts/shortcodes/user_day_agenda_2021a.html
@@ -4,6 +4,7 @@
 <table class="table samm-table" style="border: 1px solid rgba(102, 184, 184, .5);">
     <tbody>
         <tr>
+            <td class="samm-heading-row">CEST</td>
             <td class="samm-heading-row">Title</td>
             <td class="samm-heading-row">Speaker</td>
             <td class="samm-heading-row">Type</td>
@@ -11,11 +12,12 @@
         {{ range sort . "weight" }}
             {{ if eq .type "Break" }}
                 <tr>
-                    <td colspan="3" class="samm-break-row">BREAK</td>
+                    <td colspan="4" class="samm-break-row">BREAK</td>
                 </tr>
             {{ else }}
                 {{"<!-- SUD talk -->" | safeHTML}}
                 <tr>
+                    <td class="samm-title-row">{{ .time }}</td>
                     <td class="samm-title-row"><a href="{{ .url }}">{{ .name }}</a></td>
                     <td class="samm-row">{{ .presenter }}</td>
                     <td class="samm-row">{{ .type }}</td>
