Adds registration links, changes to UTC

--- a/Website/layouts/partials/banner_sud.html
+++ b/Website/layouts/partials/banner_sud.html
@@ -9,7 +9,7 @@
           </div>
           <div class="row">
             <p class="lead text-center">
-                Register now for free! The SAMM User Day is near.
+                Register now for free! SAMM User Day is near.
             </p>
             <p class="highlight text-center">
                 May 27th, 2021
@@ -18,7 +18,7 @@
           <div class="row">
               <div class="col-md-12">
                   <p class="text-center">
-                      <a href="/user-day/" class="btn btn-template-transparent-main btn-lg" style="margin-left:10px;">Register</a>
+                      <a href="https://www.eventbrite.com/e/owasp-samm-spring-user-day-2021-tickets-153193173907" class="btn btn-template-transparent-main btn-lg" style="margin-left:10px;">Register</a>
                       <a href="/user-day/" class="btn btn-template-transparent-main btn-lg" style="margin-left:10px;">Learn more</a>
                   </p>
                   
